# jdtr

./: LICENSE  README.md  pyproject.toml
src/jdtr/: __init__.py  data.py  workflow.py
tests/: e2e.py
